--- a/style.css
+++ b/style.css
@@ -1,99 +1,294 @@
-*{
+* {
     padding: 0;
     margin: 0;
-    overflow:hidden;
+    box-sizing: border-box;
 }
 
-.container{
+body, html {
+    height: 100%;
+    font-family: 'Bellefair', serif;
+}
+
+.container {
     background: black;
-   
-   
-   
-}
-header{
-  
-    padding-top: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-}
-header p{
-    font-family: "Bellefair", serif;
-    font-size: 2rem;
-    margin-right: 45rem;
     color: white;
-   
-   
-}
-
-header nav{
-    width: 10%;
-   
-    display:flex ;
-    justify-content: space-around;
-    align-items: center;
-    font-family: "Bellefair", serif;
-    font-size: 2rem;
-    color:white;
-    
-}
-
-.presentation{
-    border: 2px solid red;
-    color:white;
-    margin-top: 5rem;
-    display: grid;
-    grid-template-columns: 1fr ;
-    gap: 1rem;
-    margin-left: 0.075rem;
-    margin-left: 4rem;
-    width: 50%;
-
-}
-.presentation p{
-    
-}
-.function{
-    width: 100%;
-    color: #03DAC6;
-    font-family: "Bellefair", serif;
-    font-size: 1.5rem;
-   margin-top: 1rem;
-   
-}
-
-.name{
-    font-size: 3rem;
-    font-family: "Bellefair", serif;
-    width: 100%;
+    padding: 2rem;
+  
  
 }
 
-.descrition{
-    font-family: "Bellefair", serif;
-    width: 100%;
-    
-    
-}
-.resume{
-    border: 2px solid green;
-}
 
-.resume button{
-    border: 2px solid #03DAC6;
-}
-.resume button a{
-    text-decoration:none;
-    color: #054F48;
-    font-family: "Belgrano", serif;
-    font-size: 1.3rem;
-
-}
-.avatar{
-    border: 2px solid green;
-    width: 30%;
+header {
     display: flex;
     justify-content: center;
-    align-items:self-end;
+    align-items: center;
+    gap: 1rem;
+    margin-left: 1rem;
+    margin-top: 1rem;
+
+ 
+
+}
+
+header p {
+    font-size: 2rem;
+    margin-right: auto;
+    width: 100%;
+ 
+  
+}
+
+header nav {
+ 
+    font-size: 1.5rem;
+    cursor: pointer;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 10%;
+
+ 
+}
+header nav:hover{
+    border-bottom: 2px solid #03DAC6;
+    width: 10%;
+}
+.main-content {
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5rem;
+    margin-left: 2rem;
+
+
+}
+
+.presentation {
+    width: 50%;
+ 
+}
+
+.presentation p {
+    margin-bottom: 1rem;
+}
+
+.function {
+    color: #03DAC6;
+    font-size: 1.5rem;
+}
+
+.name {
+    font-size: 3rem;
+}
+
+.description {
+    font-size: 1.2rem;
+
+}
+
+.resume button {
+    border: 2px solid #03DAC6;
+    background: none;
+    padding: 0.5rem 1rem;
+    margin-top: 2rem;
+}
+
+.resume button a {
+    text-decoration: none;
+    color: #054F48;
+    font-family: 'Belgrano', serif;
+    font-size: 1.3rem;
+}
+.resume button:hover{
+    border:4px solid white;
+ 
+}
+   
+
+.avatar {
+    
+    width: 20%;
+}
+
+
+.avatar img {
+    width: 100%;
+}
+
+.social-links {
+
+    margin-top: 2rem;
+    display: flex;
+    width: 15%;
+    gap: 1rem;
+   
+}
+
+.social-links a img {
+
+    margin-left: 1rem;
+    width: 90%;
+
+  
+}
+.social-links a :hover{
+    border-bottom: 1px solid white;
+}
+
+.SkillsContainer {
+    padding: 2rem;
+    background-color: #5F5959;
+ 
+}
+
+.SkillsContainer p {
+
+    font-size: 3.375rem;
+    font-family: "Bellefair", serif;
+    color: black;
+    text-align: center;
+    margin-bottom: 6rem;
+}
+
+.skills {
+ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.skills-grid {
+ 
+    display: flex;
+    justify-content: space-between;
+    gap: 10rem;
+}
+
+.skill {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.skill img {
+    margin-bottom: 1rem;
+    max-width: 100%;
+    height: auto;
+}
+.skill:hover{
+   cursor: pointer;
+   width: 50%;
+}
+.projects {
+    padding: 2rem;
+    background-color: #0A0A0A;
+    text-align: center;
+}
+
+.projects p {
+    font-size: 3.375rem;
+    color: #03DAC6;;
+    font-family: "Bellefair", serif;
+    margin-bottom: 5rem;
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.project {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+}
+
+.project img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 1rem;
+   
+}
+.project img:hover{
+    width: 80%;
+    cursor: pointer;
+}
+
+.buttons {
+    display: flex;
+    gap: 1rem;
+   
+}
+
+.buttons a {
+    text-decoration: none;
+}
+
+.buttons button {
+    padding: 0.5rem 1rem;
+    border: 3px solid #03DAC6;
+    border-radius: 3px;
+    background-color: #B0B0B0;
+    color:#054F48;
+    font-family: "Belgrano", serif;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.buttons button:hover {
+    border:4px solid #2F2BD5;
+    color:white
+}
+
+.contact{
+    
+    background-color: #5F5959;
+}
+.title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 1.5rem;
+    font-family: "Bellefair", serif;
+    color: #000000;
+    font-size: 3.375rem;
+}
+.descrition{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Bellefair", serif;
+    color:#FFFFFF;
+    font-size: 1.875rem;
+    margin-top: 2.5rem;
+
+}
+
+.contact-link{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+  
+}
+.contact-link img{
+    width:50px ;
+    height:50px ;
+    margin-bottom: 1rem;
+    
+}
+.contact-link img:hover{
+    width:60px ;
+    height:60px ;
+    border: 2px solid white;
+    border-radius: 5px;
 }
