--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* styles.css */
 * {
     padding: 0;
     margin: 0;
@@ -13,10 +14,7 @@ body, html {
     background: black;
     color: white;
     padding: 2rem;
-  
- 
 }
-
 
 header {
     display: flex;
@@ -25,11 +23,17 @@ header {
     gap: 1rem;
     margin-left: 1rem;
     margin-top: 1rem;
-
- 
-
+   
 }
-header nav a{
+
+header nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem; 
+}
+
+header nav a {
     text-decoration: none;
     list-style: none;
     font-size: 2rem;
@@ -37,44 +41,36 @@ header nav a{
     width: 100%;
     color: white;
 }
+
 header p {
     font-size: 2rem;
     margin-right: auto;
     width: 100%;
- 
-  
+    color: white;
 }
 
-header nav {
- 
-    font-size: 1.5rem;
-    cursor: pointer;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    width: 10%;
-
- 
-}
-header nav:hover{
-    border-bottom: 2px solid #03DAC6;
-    width: 10%;
-}
-.main-content {
+.menu-icon {
     
+    font-size: 30px;
+    cursor: pointer;
+    color: #03DAC6; 
+}
+
+.menu {
+    display: flex;
+}
+
+
+.main-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 5rem;
     margin-left: 2rem;
-
-
 }
 
 .presentation {
     width: 50%;
- 
 }
 
 .presentation p {
@@ -92,7 +88,6 @@ header nav:hover{
 
 .description {
     font-size: 1.2rem;
-
 }
 
 .resume button {
@@ -108,66 +103,55 @@ header nav:hover{
     font-family: 'Belgrano', serif;
     font-size: 1.3rem;
 }
-.resume button:hover{
-    border:4px solid white;
- 
+
+.resume button:hover {
+    border: 4px solid white;
 }
-   
 
 .avatar {
-    
     width: 20%;
 }
-
 
 .avatar img {
     width: 100%;
 }
 
 .social-links {
-
     margin-top: 2rem;
     display: flex;
     width: 15%;
     gap: 1rem;
-   
 }
 
 .social-links a img {
-
     margin-left: 1rem;
     width: 90%;
-
-  
 }
-.social-links a :hover{
+
+.social-links a:hover {
     border-bottom: 1px solid white;
 }
 
 .SkillsContainer {
     padding: 2rem;
     background-color: #5F5959;
- 
 }
 
 .SkillsContainer p {
-
     font-size: 3.375rem;
-    font-family: "Bellefair", serif;
+    font-family: 'Bellefair', serif;
     color: black;
     text-align: center;
     margin-bottom: 6rem;
 }
 
 .skills {
- 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .skills-grid {
- 
     display: flex;
     justify-content: space-between;
     gap: 10rem;
@@ -184,20 +168,22 @@ header nav:hover{
     max-width: 100%;
     height: auto;
 }
-.skill:hover{
-   cursor: pointer;
-   width: 50%;
+
+.skill:hover {
+    cursor: pointer;
+    width: 50%;
 }
+
 .projects {
     padding: 2rem;
     background-color: #0A0A0A;
     text-align: center;
-}
+}  
 
 .projects p {
     font-size: 3.375rem;
-    color: #03DAC6;;
-    font-family: "Bellefair", serif;
+    color: #03DAC6;
+    font-family: 'Bellefair', serif;
     margin-bottom: 5rem;
 }
 
@@ -205,23 +191,23 @@ header nav:hover{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
+    
 }
 
 .project {
-
     display: flex;
     flex-direction: column;
     align-items: center;
-   
+    
 }
 
 .project img {
     max-width: 100%;
     height: auto;
     margin-bottom: 1rem;
-   
 }
-.project img:hover{
+
+.project img:hover {
     width: 80%;
     cursor: pointer;
 }
@@ -229,7 +215,6 @@ header nav:hover{
 .buttons {
     display: flex;
     gap: 1rem;
-   
 }
 
 .buttons a {
@@ -241,67 +226,201 @@ header nav:hover{
     border: 3px solid #03DAC6;
     border-radius: 3px;
     background-color: #B0B0B0;
-    color:#054F48;
-    font-family: "Belgrano", serif;
+    color: #054F48;
+    font-family: 'Belgrano', serif;
     font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .buttons button:hover {
-    border:4px solid #2F2BD5;
-    color:white
+    border: 4px solid #2F2BD5;
+    color: white;
 }
 
-.contact{
-    
+.contact {
     background-color: #5F5959;
 }
-.title{
+
+.title {
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 1.5rem;
-    font-family: "Bellefair", serif;
+    font-family: 'Bellefair', serif;
     color: #000000;
     font-size: 3.375rem;
 }
-.descrition{
+
+.descrition {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "Bellefair", serif;
-    color:#FFFFFF;
+    font-family: 'Bellefair', serif;
+    color: #FFFFFF;
     font-size: 1.875rem;
     margin-top: 2.5rem;
-
 }
 
-.contact-link{
-    
+.contact-link {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-top: 5rem;
     margin-bottom: 3rem;
-  
 }
-.contact-link img{
-    width:50px ;
-    height:50px ;
+
+.contact-link img {
+    width: 50px;
+    height: 50px;
     margin-bottom: 1rem;
-    
 }
-.contact-link img:hover{
-    width:60px ;
-    height:60px ;
+
+.contact-link img:hover {
+    width: 60px;
+    height: 60px;
     border: 2px solid white;
     border-radius: 5px;
 }
+
 footer {
     display: flex;
     justify-content: center;
-    align-self:center;
+    align-self: center;
+}
 
+@media (max-width: 600px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    header p {
+      
+        margin-left: 3rem;
+      
+    }
+    
+
+    .menu {
+        display: none; 
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .menu-icon {
+        display: block; 
+    }
+
+    header nav {
+        width: 100%;
+    }
+
+    header nav a {
+        margin: 10px 0;
+        font-size: 1.5rem;
+    }
+    
+.main-content {
+ 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5rem;
+    margin-left: 2rem;
+}
+
+.presentation {
+    width: 100%;
+   
+    
+}
+
+.presentation p {
+    margin-bottom: 1rem;
+    
+}
+
+.function {
+    color: #03DAC6;
+    font-size: 1rem;
+  
+}
+
+.name {
+    font-size: 2rem;
+}
+
+.description {
+    font-size: 1rem;
+}
+
+.resume button a {
+    font-size: 1rem;
+}
+
+.avatar {
+    width: 80%;
+    padding-left: 1rem;
+   
+}
+.skills {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; 
+    width: 100%;
+}
+
+.skills-grid {
+    display: grid;
+    grid-template-columns:  1fr; 
+    gap: 2rem;
+    width: 100%;
+}
+
+.skill {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 2rem; 
+    width: 100%;
+}
+
+
+
+.projects p {
+    font-size: 3rem;
+    
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns:1fr ;
+    gap: 5rem;
+    width: 100%;
+    
+}
+
+
+.contact {
+    background-color: #5F5959;
+
+}
+
+.title {
+
+    font-size: 3rem;
+
+}
+
+.descrition {
+
+    font-size: 1rem;
+    margin-top: 2.5rem;
+    padding-left: 1rem;
+    
+}   
 }
